--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
-        "axios": "^0.18",
-        "bulma": "^0.7.4",
         "@fortawesome/fontawesome-svg-core": "^1.2.17",
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
         "@fortawesome/vue-fontawesome": "^0.1.6",
+        "axios": "^0.18",
         "buefy": "^0.7.5",
+        "bulma": "^0.7.4",
+        "sweetalert2": "^8.11.7",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     }
