--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^0.18",
         "buefy": "^0.7.5",
         "bulma": "^0.7.4",
+        "cross-env": "^5.2.0",
         "sweetalert2": "^8.11.7",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
