--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
         "@fortawesome/free-solid-svg-icons": "^5.8.1",
         "@fortawesome/vue-fontawesome": "^0.1.6",
         "axios": "^0.18",
-        "buefy": "^0.7.5",
-        "bulma": "^0.7.4",
+        "buefy": "^0.7.7",
+        "bulma": "^0.7.5",
         "cross-env": "^5.2.0",
+        "moment": "^2.24.0",
         "sweetalert2": "^8.11.7",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
