--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/inflector": "1.1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laraveles/spanish": "^1.2",
         "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
